--- a/css/layouts/_section_about.scss
+++ b/css/layouts/_section_about.scss
@@ -1,4 +1,4 @@
-section .heading {
+section .head_banner {
     text-align: center;
     padding-bottom: 40px;
 }
@@ -13,12 +13,12 @@ section .heading {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
 }
-#about .heading h1 {
+#about .head_banner h1 {
     margin-top: 20px;
     color: #fff;
     text-transform: uppercase;
 }
-#about .heading h3 {
+#about .head_banner h3 {
     color: #000;
 }
 .profile-picture {
