--- a/css/layouts/_section_exp.scss
+++ b/css/layouts/_section_exp.scss
@@ -1,18 +1,3 @@
-:root {
-    --white: #ffffff;
-    --black: #000000;
-    --blue: #0288d1;
-    --gray: #ebebeb;
-    --box-shadow1: 0px 0px 18px 2px rgba(10, 55, 90, 0.15);
-}
-body {
-    font-family: "Roboto", sans-serif;
-    font-weight: lighter;
-    color: #637280;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
 :focus {
     outline: 0px solid transparent !important;
 }
@@ -31,13 +16,28 @@ body {
 .timeline p {
     padding: 5px 15px;
 }
+.timeline-content h4 {
+    padding: 5px 15px;
+}
 .timeline h3 {
     font-weight: lighter;
     background: $background-main;
+    text-align: left;
 }
-.timeline p,
+.timeline h4 {
+    background: $color;
+    opacity: .7;
+    font-style: italic;
+    font-size: 1.3em;
+    font-weight: lighter;
+    text-align: left;
+}
+.timeline li,
 .timeline time {
     color: $background-main;
+    list-style-type: none;
+    text-align: left;
+    text-decoration: underline;
 }
 .timeline::before {
     content: "";
@@ -57,7 +57,7 @@ body {
     border-radius: 0 0 10px 10px;
     box-shadow: 0px 3px 25px 0px rgba(10, 55, 90, 0.2);
 }
-.timeline-nodes:nth-child(odd) h3,
+.timeline-nodes:nth-child(odd) h3
 .timeline-nodes:nth-child(odd) p {
     text-align: right;
 }
@@ -113,7 +113,7 @@ body {
 #exp_responsive {
     width: 85%;
 }
-#experience .heading h2 {
+#experience .head_banner h2 {
     margin-top: 30px;
     color: $background_main;
     text-transform: uppercase;
@@ -121,6 +121,11 @@ body {
 #exp_responsive img {
     border-radius: 50%;
 }
+.row > * {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 /*small device style*/
 
 @media (max-width: 767px) {
@@ -145,6 +150,7 @@ body {
     }
     .timeline h3 {
         font-size: 1.7rem;
+        text-align: left;
     }
     .timeline p {
         font-size: 14px;
