--- a/css/layouts/_section_skills.scss
+++ b/css/layouts/_section_skills.scss
@@ -1,4 +1,4 @@
-.heading i {
+.head_banner i {
     padding-right: 10px;
 }
 .d-flex {
@@ -17,7 +17,7 @@
 #skills {
     background: #fff;
 }
-#skills .heading h2 {
+#skills .head_banner h2 {
     margin-top: 30px;
     color: $background_main;
     text-transform: uppercase;
