--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/* :root {
+    --white: #ffffff;
+    --black: #000000;
+    --blue: #0288d1;
+    --gray: #ebebeb;
+    --box-shadow1: 0px 0px 18px 2px rgba(10, 55, 90, 0.15);
+} */
 /*ANIMATIONS DES POINTS DE SUSPENSION DES SKILLS
 ==============================================================*/
 .spin1 {
@@ -52,7 +59,11 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
 }
 
 section {
@@ -63,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
-section .heading {
+section .head_banner {
   text-align: center;
   padding-bottom: 40px;
 }
@@ -81,13 +92,13 @@ section .heading {
   filter: grayscale(100%);
 }
 
-#about .heading h1 {
+#about .head_banner h1 {
   margin-top: 20px;
   color: #fff;
   text-transform: uppercase;
 }
 
-#about .heading h3 {
+#about .head_banner h3 {
   color: #000;
 }
 
@@ -116,7 +127,7 @@ section .heading {
   text-decoration: none;
 }
 
-.heading i {
+.head_banner i {
   padding-right: 10px;
 }
 
@@ -141,7 +152,7 @@ section .heading {
   background: #fff;
 }
 
-#skills .heading h2 {
+#skills .head_banner h2 {
   margin-top: 30px;
   color: #2e51af;
   text-transform: uppercase;
@@ -166,24 +177,6 @@ section .heading {
   height: 2px;
   background: #2e51af;
   margin: 0 auto;
-}
-
-:root {
-  --white: #ffffff;
-  --black: #000000;
-  --blue: #0288d1;
-  --gray: #ebebeb;
-  --box-shadow1: 0px 0px 18px 2px rgba(10, 55, 90, 0.15);
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: lighter;
-  color: #637280;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-      user-select: none;
 }
 
 :focus {
@@ -212,14 +205,31 @@ body {
   padding: 5px 15px;
 }
 
+.timeline-content h4 {
+  padding: 5px 15px;
+}
+
 .timeline h3 {
   font-weight: lighter;
   background: #2e51af;
+  text-align: left;
 }
 
-.timeline p,
+.timeline h4 {
+  background: #637280;
+  opacity: .7;
+  font-style: italic;
+  font-size: 1.3em;
+  font-weight: lighter;
+  text-align: left;
+}
+
+.timeline li,
 .timeline time {
   color: #2e51af;
+  list-style-type: none;
+  text-align: left;
+  text-decoration: underline;
 }
 
 .timeline::before {
@@ -244,7 +254,7 @@ body {
           box-shadow: 0px 3px 25px 0px rgba(10, 55, 90, 0.2);
 }
 
-.timeline-nodes:nth-child(odd) h3,
+.timeline-nodes:nth-child(odd) h3
 .timeline-nodes:nth-child(odd) p {
   text-align: right;
 }
@@ -309,7 +319,7 @@ body {
   width: 85%;
 }
 
-#experience .heading h2 {
+#experience .head_banner h2 {
   margin-top: 30px;
   color: #2e51af;
   text-transform: uppercase;
@@ -317,6 +327,11 @@ body {
 
 #exp_responsive img {
   border-radius: 50%;
+}
+
+.row > * {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 /*small device style*/
@@ -346,6 +361,7 @@ body {
   }
   .timeline h3 {
     font-size: 1.7rem;
+    text-align: left;
   }
   .timeline p {
     font-size: 14px;
