--- a/css/utils/_variables.scss
+++ b/css/utils/_variables.scss
@@ -1,1 +1,9 @@
+/* :root {
+    --white: #ffffff;
+    --black: #000000;
+    --blue: #0288d1;
+    --gray: #ebebeb;
+    --box-shadow1: 0px 0px 18px 2px rgba(10, 55, 90, 0.15);
+} */
 $background_main: #2e51af;
+$color: #637280;
